@@ -3297,6 +3297,40 @@ argument_list|(
 name|searcher
 argument_list|)
 decl_stmt|;
+name|int
+name|docsToCollect
+init|=
+name|Grouping
+operator|.
+name|getMax
+argument_list|(
+name|groupingSpec
+operator|.
+name|getGroupOffset
+argument_list|()
+argument_list|,
+name|groupingSpec
+operator|.
+name|getGroupLimit
+argument_list|()
+argument_list|,
+name|searcher
+operator|.
+name|maxDoc
+argument_list|()
+argument_list|)
+decl_stmt|;
+name|docsToCollect
+operator|=
+name|Math
+operator|.
+name|max
+argument_list|(
+name|docsToCollect
+argument_list|,
+literal|1
+argument_list|)
+expr_stmt|;
 for|for
 control|(
 name|String
@@ -3464,15 +3498,7 @@ argument_list|)
 operator|.
 name|setMaxDocPerGroup
 argument_list|(
-name|groupingSpec
-operator|.
-name|getGroupOffset
-argument_list|()
-operator|+
-name|groupingSpec
-operator|.
-name|getGroupLimit
-argument_list|()
+name|docsToCollect
 argument_list|)
 operator|.
 name|setNeedScores
@@ -3511,15 +3537,7 @@ argument_list|()
 operator|.
 name|setDocsToCollect
 argument_list|(
-name|groupingSpec
-operator|.
-name|getOffset
-argument_list|()
-operator|+
-name|groupingSpec
-operator|.
-name|getLimit
-argument_list|()
+name|docsToCollect
 argument_list|)
 operator|.
 name|setSort
