@@ -2764,8 +2764,10 @@ argument_list|)
 expr_stmt|;
 block|}
 block|}
-comment|/**    * Returns offset + len if len equals zero or higher. Otherwise returns max.    *    * @param offset The offset    * @param len    The number of documents to return    * @param max    The number of document to return if len< 0 or if offset + len< 0    * @return offset + len if len equals zero or higher. Otherwise returns max    */
+comment|/**    * Returns offset + len if len equals zero or higher. Otherwise returns max.    *    * @param offset The offset    * @param len    The number of documents to return    * @param max    The number of document to return if len&lt; 0 or if offset + len&gt; 0    * @return offset + len if len equals zero or higher. Otherwise returns max    */
 DECL|method|getMax
+specifier|public
+specifier|static
 name|int
 name|getMax
 parameter_list|(
