@@ -1292,6 +1292,38 @@ name|size
 argument_list|()
 index|]
 decl_stmt|;
+name|int
+name|docsPerGroup
+init|=
+name|docsPerGroupDefault
+decl_stmt|;
+if|if
+condition|(
+name|docsPerGroup
+operator|<
+literal|0
+condition|)
+block|{
+name|docsPerGroup
+operator|=
+literal|0
+expr_stmt|;
+for|for
+control|(
+name|TopGroups
+name|subTopGroups
+range|:
+name|topGroups
+control|)
+block|{
+name|docsPerGroup
+operator|+=
+name|subTopGroups
+operator|.
+name|totalGroupedHitCount
+expr_stmt|;
+block|}
+block|}
 name|rb
 operator|.
 name|mergedTopGroups
@@ -1317,7 +1349,7 @@ name|sortWithinGroup
 argument_list|,
 name|groupOffsetDefault
 argument_list|,
-name|docsPerGroupDefault
+name|docsPerGroup
 argument_list|,
 name|TopGroups
 operator|.
